--- a/Knes_LH2/Knes_LH2.cfg
+++ b/Knes_LH2/Knes_LH2.cfg
@@ -2,10 +2,11 @@
 //Use with CryoTanks ro get Hydrolox switcher for LFO tanks
 //Author: Zorg
 
-@PART[_Knes_H3_Engine_0625]:NEEDS[CryoTanks]
+@PART[_Knes_H3_Engine_0625]:NEEDS[CryoTanks]:FOR[Knes_LH2]
 {
 	@MODULE[ModuleEngines*]:HAS[@PROPELLANT[LiquidFuel]]
 	{
+		@maxThrust = 4 //IRL 3.92
 		@PROPELLANT[LiquidFuel]
 		{
 			@name = LqdHydrogen
@@ -25,10 +26,11 @@
 	}
 }
 
-@PART[_Knes_H2_Engine_09375]:NEEDS[CryoTanks]
+@PART[_Knes_H2_Engine_09375]:NEEDS[CryoTanks]:FOR[Knes_LH2]
 {
 	@MODULE[ModuleEngines*]:HAS[@PROPELLANT[LiquidFuel]]
 	{
+		@maxThrust = 29 //58.8kn IRL
 		@PROPELLANT[LiquidFuel]
 		{
 			@name = LqdHydrogen
@@ -46,10 +48,11 @@
 	}
 }
 
-@PART[_Knes_L3S_L3S_HM4_Engine]:NEEDS[CryoTanks]
+@PART[_Knes_L3S_L3S_HM4_Engine]:NEEDS[CryoTanks]:FOR[Knes_LH2]
 {
 	@MODULE[ModuleEngines*]:HAS[@PROPELLANT[LiquidFuel]]
 	{
+		@maxThrust = 20 //IRL 40 Kn
 		@PROPELLANT[LiquidFuel]
 		{
 			@name = LqdHydrogen
@@ -70,10 +73,11 @@
 }
 
 
-@PART[_Knes_L3S_L3S_HM60_Engine]:NEEDS[CryoTanks]
+@PART[_Knes_L3S_L3S_HM60_Engine]:NEEDS[CryoTanks]:FOR[Knes_LH2]
 {
 	@MODULE[ModuleEngines*]:HAS[@PROPELLANT[LiquidFuel]]
 	{
+		@maxThrust = 400 //IRL 800Kn with growth potential to 1300
 		@PROPELLANT[LiquidFuel]
 		{
 			@name = LqdHydrogen
@@ -94,11 +98,12 @@
 	}
 }
 
-@PART[Knes_Engine_Vulcain]:NEEDS[CryoTanks]
+@PART[Knes_Engine_Vulcain]:NEEDS[CryoTanks]:FOR[Knes_LH2]
 {
+	@mass = 1.5
 	@MODULE[ModuleEngines*]:HAS[@PROPELLANT[LiquidFuel]]
 	{
-		@maxThrust = 540 //720
+		@maxThrust = 570 // = 50% scaling to deal with overscaled Ariane 5 core. //427 = 37.5% irl  // //IRL 1140
 		@PROPELLANT[LiquidFuel]
 		{
 			@name = LqdHydrogen
@@ -119,10 +124,11 @@
 	}
 }
 
-@PART[Knes_Engine_Zebulon]:NEEDS[CryoTanks]
+@PART[Knes_Engine_Zebulon]:NEEDS[CryoTanks]:FOR[Knes_LH2]
 {
 	@MODULE[ModuleEngines*]:HAS[@PROPELLANT[LiquidFuel]]
 	{
+		@maxThrust = 31.1 //IRL 62.2
 		@PROPELLANT[LiquidFuel]
 		{
 			@name = LqdHydrogen
@@ -140,5 +146,28 @@
 			key = 1 380
 			key = 6 0.001
 		}
+	}
+}
+
+@PART[Knes_Booster_EAP]:NEEDS[CryoTanks]:FOR[Knes_LH2]
+{
+	@cost = 8500
+	@mass = 10.4
+	@description ^= :$: *105% to 66% thrust curve*.:
+	@MODULE[ModuleEngines*]
+	{
+		@maxThrust = 1587
+		%useThrustCurve = true
+		thrustCurve
+		{
+			key = 0    0.15  0    15
+			key = 0.03 0.66  0.5  0.5
+			key = 1    1    -0.6    0
+		}
+	}
+	@RESOURCE[SolidFuel]
+	{
+		@amount = 6092
+		@maxAmount = 6092
 	}
 }
