--- a/Knes_LH2/Knes_thrust_nerf.cfg
+++ b/Knes_LH2/Knes_thrust_nerf.cfg
@@ -12,7 +12,7 @@
 }
 
 //25% LFO engines
-@PART[_Knes_Mireille_Engine_09375|_Knes_L3S_L33_Engine|Knes_Engine_EPS|_Knes_Diamant_Engine_09375|Knes_Hermes_Engine_Mk91]:NEEDS[Knes]:AFTER[Knes]
+@PART[_Knes_Mireille_Engine_09375|_Knes_L3S_L33_Engine|Knes_Engine_EPS|Knes_Hermes_Engine_Mk91|Knes_Service_Module_Viking_09375]:NEEDS[Knes]:AFTER[Knes]
 {
   @mass *= 0.5
   @MODULE[ModuleEngines*]
