--- a/Knes/Knes_solids.cfg
+++ b/Knes/Knes_solids.cfg
@@ -2,7 +2,7 @@
 // Adds 105% to 30# regressive thrust curve and ability to shut them down.
 @PART[_Knes_Diamant_Booster_P064_0625|_Knes_Diamant2_Booster_Rita2_9375|_Knes_DiamantBP4_Booster_Rita_09375]:AFTER[Knes]
 {
-	@description ^= :$: Can be shut down in flight for more precise orbital insertion. *105% to 30% regressive thrust curve*.:
+	@description ^= :$: Can be shut down in flight for more precise orbital insertion. *105% to 50% regressive thrust curve*.:
   @MODULE[ModuleEngines*]
   {
     allowShutdown = True
@@ -11,12 +11,19 @@
     thrustCurve
     {
       key = 0    0.15  0    15
-      key = 0.03 0.30  0.5  0
+      key = 0.03 0.50  0.5  0
       key = 1    1     0.7  0
     }
   }
 }
 
+@PART[_Knes_DiamantBP4_Booster_Rita_09375]:AFTER[Knes]
+{
+	@MODULE[ModuleEngines*]
+	{
+		@maxThrust = 36.4
+	}
+}
 //Other solids. Adds 105% to 66% regressive thrust curve
 @PART[_Knes_Topaze_Booster_0625,_Knes_Diamant2_Booster_P10_9375,_Knes_Diamant2_Booster_P16_9375]:AFTER[Knes]
 {
