--- a/Knes/Knes_solids.cfg
+++ b/Knes/Knes_solids.cfg
@@ -5,8 +5,8 @@
 	@description ^= :$: Can be shut down in flight for more precise orbital insertion. *105% to 50% regressive thrust curve*.:
   @MODULE[ModuleEngines*]
   {
-    allowShutdown = True
-    allowRestart = False
+    %allowShutdown = True
+    %allowRestart = False
     %useThrustCurve = true
     thrustCurve
     {
